<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_id"
        android:text="@string/title_music"
        android:textSize="30dp"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        />
    <View
        android:id="@+id/line"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_alignBottom="@+id/title_id"
        android:background="#AFADAD"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/search"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <HorizontalScrollView
        android:id="@+id/hor_view_id"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:scrollbars="none"
        android:layout_below="@+id/line"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/id_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >
        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/smaller_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_albums_title"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_below="@+id/hor_view_id"
        android:layout_marginStart="30dp"
        android:textColor="#000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/show_all_albums"
        android:background="#00000000"
        android:textColor="#AFADAD"
        android:layout_below="@+id/hor_view_id"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"
        android:textSize="18dp"/>

    <ListView
        android:id="@+id/albums_list_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smaller_title_id"
        android:layout_marginTop="10dp">
    </ListView>




</RelativeLayout>